pic with new pixels

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <link rel="icon" type="image/jpg" href="img/logo-futuristica.png"/>
+  <link rel="icon" type="image/png" href="img/logo-futuristica.png"/>
 
   <title>Futuristica &#128640 Soluciones tecnológicas</title>
 
