english page added

--- a/english.html
+++ b/english.html
@@ -10,7 +10,7 @@
 
   <link rel="icon" type="image/png" href="img/logo-futuristica.png"/>
 
-  <title>Futuristica &#128640 Soluciones tecnológicas</title>
+  <title>Futuristica &#128640 Technological solutions</title>
 
   <!-- Bootstrap Core CSS  -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -37,22 +37,22 @@
         <a class="js-scroll-trigger" href="#page-top">Futuristica</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#page-top">Inicio</a>
+        <a class="js-scroll-trigger" href="#page-top">Home</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#about">Nosotros</a>
+        <a class="js-scroll-trigger" href="#about">About us</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Servicios</a>
+        <a class="js-scroll-trigger" href="#services">Services</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portafolio</a>
+        <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contacto</a>
+        <a class="js-scroll-trigger" href="#contact">Contact</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="english.html">English</a>
+        <a class="js-scroll-trigger" href="index.html">Español</a>
       </li>
     </ul>
   </nav>
@@ -62,9 +62,9 @@
     <div class="container text-center my-auto">
       <h1 class="mb-1"><font color="#ffffff">Futuristica</font></h1>
       <h3 class="mb-5">
-        <em><font color="#ffffff">Soluciones tecnológicas &#128640</font></em>
+        <em><font color="#ffffff">Technological solutions &#128640</font></em>
       </h3>
-      <a class="btn btn-dark btn-xl js-scroll-trigger" href="#about">Conoce Más</a>
+      <a class="btn btn-dark btn-xl js-scroll-trigger" href="#about">Know more</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -74,9 +74,9 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Desarrollamos la tecnología que necesitas</h2>
-          <p class="lead mb-5">Para ser más competitivo</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Servicios</a>
+          <h2>We develop the technology you need</h2>
+          <p class="lead mb-5">to be more competitive</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Services</a>
         </div>
       </div>
     </div>
@@ -86,7 +86,7 @@
   <section class="content-section bg-primary text-white text-center" id="services">
     <div class="container">
       <div class="content-section-heading">
-        <h2 class="mb-5">Servicios</h2>
+        <h2 class="mb-5">Services</h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -94,7 +94,7 @@
             <i class="icon-screen-desktop"></i>
           </span>
           <h4>
-            <strong>Desarrollo web</strong>
+            <strong>Web development</strong>
           </h4>
           <p class="text-faded mb-0"></p>
         </div>
@@ -103,7 +103,7 @@
             <i class="icon-organization"></i>
           </span>
           <h4>
-            <strong>Automatización</strong>
+            <strong>Automation</strong>
           </h4>
           <p class="text-faded mb-0"></p>
         </div>
@@ -112,7 +112,7 @@
             <i class="icon-energy"></i>
           </span>
           <h4>
-            <strong>Eventos tecnológicos</strong>
+            <strong>Technological events</strong>
           </h4>
           <p class="text-faded mb-0"></p>
         </div>
@@ -121,7 +121,7 @@
             <i class="icon-folder"></i>
           </span>
           <h4>
-            <strong>Consultoría</strong>
+            <strong>Data consulting</strong>
           </h4>
           <p class="text-faded mb-0"></p>
         </div>
@@ -133,7 +133,7 @@
   <section class="content-section" id="portfolio">
     <div class="container">
       <div class="content-section-heading text-center">
-        <h2 class="mb-5">Proyectos Recientes</h2>
+        <h2 class="mb-5">Recent Projects</h2>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
@@ -141,7 +141,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>COFOCE CARGO</h2>
-                <p class="mb-0">Cotizador de exportaciones a Norte y Centroamérica.</p>
+                <p class="mb-0">Export quoter to North and Central America.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/cargo.png" width="700" height="467" alt="">
@@ -152,7 +152,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Datostada</h2>
-                <p class="mb-0">Donde la ciencia y la industria aprenden de datos en México.</p>
+                <p class="mb-0">Where science and industry learn from data in Mexico.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/datostada.png" alt="">
@@ -164,7 +164,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>SESEA</h2>
-                <p class="mb-0">Apliación web con gestores de contenido y accesibilidad.</p>
+                <p class="mb-0">Web application with content managers and accessibility.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/sesea.png" alt="">
@@ -175,7 +175,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Azuela Group</h2>
-                <p class="mb-0">Expertos en logística</p>
+                <p class="mb-0">Mexican logistics experts.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/aita.png" alt="">
@@ -186,7 +186,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Future Lab</h2>
-                <p class="mb-0">La comunidad del futuro.</p>
+                <p class="mb-0">The community of the future.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/futurelab.png" alt="">
@@ -197,7 +197,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Guanahacks</h2>
-                <p class="mb-0">El 1er. Hackatón en Guanajuato capital.</p>
+                <p class="mb-0">The 1st. Hackathon in Guanajuato capital.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/guanahacks.png" alt="">
@@ -212,8 +212,8 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Contáctanos</h2>
-          <p class="lead mb-5">Juntos podemos desarrollar la opción a tu medida</p>
+          <h2>Contact</h2>
+          <p class="lead mb-5">Together we can develop the option to suit you</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="mailto:futuristica.io@gmail.com">Email</a>
         </div>
       </div>
