--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         <a class="js-scroll-trigger" href="#about">Nosotros</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Servicios</a>
+        <a class="js-scroll-trigger" href="#services">Desarrollos</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portafolio</a>
+        <a class="js-scroll-trigger" href="#portfolio">Proyectos</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#contact">Contacto</a>
       </li>
-      <li class="sidebar-nav-item">
+      <!-- <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="english.html">English</a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 
@@ -64,7 +64,7 @@
       <h3 class="mb-5">
         <em><font color="#ffffff">Soluciones tecnológicas &#128640</font></em>
       </h3>
-      <a class="btn btn-dark btn-xl js-scroll-trigger" href="#about">Conoce Más</a>
+      <a class="btn btn-dark btn-xl js-scroll-trigger" href="#about">Nosotros</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -75,8 +75,8 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h2>Desarrollamos la tecnología que necesitas</h2>
-          <p class="lead mb-5">Para ser más competitivo</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Servicios</a>
+          <p class="lead mb-5">Para ser más competitivo y vender más &#128200</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Desarrollos</a>
         </div>
       </div>
     </div>
@@ -86,7 +86,7 @@
   <section class="content-section bg-primary text-white text-center" id="services">
     <div class="container">
       <div class="content-section-heading">
-        <h2 class="mb-5">Servicios</h2>
+        <h2 class="mb-5">Desarrollos</h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -94,34 +94,34 @@
             <i class="icon-screen-desktop"></i>
           </span>
           <h4>
-            <strong>Desarrollo web</strong>
+            <strong>Páginas web</strong>
           </h4>
           <p class="text-faded mb-0"></p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-organization"></i>
+            <i class="icon-credit-card"></i>
           </span>
           <h4>
-            <strong>Automatización</strong>
+            <strong>Tiendas en línea</strong>
           </h4>
           <p class="text-faded mb-0"></p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-energy"></i>
+            <i class="icon-organization"></i>
           </span>
           <h4>
-            <strong>Eventos tecnológicos</strong>
+            <strong>Automatizaciones</strong>
           </h4>
           <p class="text-faded mb-0"></p>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-folder"></i>
+            <i class="icon-calculator"></i>
           </span>
           <h4>
-            <strong>Consultoría</strong>
+            <strong>Apps</strong>
           </h4>
           <p class="text-faded mb-0"></p>
         </div>
@@ -133,29 +133,29 @@
   <section class="content-section" id="portfolio">
     <div class="container">
       <div class="content-section-heading text-center">
-        <h2 class="mb-5">Proyectos Recientes</h2>
+        <h2 class="mb-5">Algunos de nuestros proyectos &#128194</h2>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="http://cargo-flask.herokuapp.com/" target="_blank">
+          <a class="portfolio-item" href="https://cofoce.guanajuato.gob.mx/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>COFOCE CARGO</h2>
-                <p class="mb-0">Cotizador de exportaciones a Norte y Centroamérica.</p>
+                <h2>COFOCE</h2>
+                <p class="mb-0">Cotizador de exportaciones a Norteamérica y Centroamérica.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/cargo.png" width="700" height="467" alt="">
+            <img class="img-fluid" src="img/cofoce.png" width="700" height="467" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://datostada.mx/" target="_blank">
+          <a class="portfolio-item" href="https://raulgonzalezm.com/inicio " target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Datostada</h2>
-                <p class="mb-0">Donde la ciencia y la industria aprenden de datos en México.</p>
+                <h2>Tanatólogo y cartas de ángeles</h2>
+                <p class="mb-0">Página web y tienda en línea.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/datostada.png" alt="">
+            <img class="img-fluid" src="img/raul.png" alt="">
           </a>
         </div>
         <div class="row no-gutters">
@@ -164,43 +164,43 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>SESEA</h2>
-                <p class="mb-0">Apliación web con gestores de contenido y accesibilidad.</p>
+                <p class="mb-0">Desarrollo de página web con gestores de contenido y accesibilidad.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/sesea.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="http://azuelagroup.com/" target="_blank">
+          <a class="portfolio-item" href="https://iss-ic.com.mx/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Azuela Group</h2>
-                <p class="mb-0">Expertos en logística</p>
+                <h2>ISS Ingenieros & Consultores, S.A. de C.V.</h2>
+                <p class="mb-0">Empresa de supervisión de obras en aeropuertos de México.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/aita.png" alt="">
+            <img class="img-fluid" src="img/iss.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://futurelab.mx/" target="_blank">
+          <a class="portfolio-item" href="https://beehack.ugto.mx/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Future Lab</h2>
-                <p class="mb-0">La comunidad del futuro.</p>
+                <h2>Bee Hack</h2>
+                <p class="mb-0">Evento tecnológico insignia de la UG.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/futurelab.png" alt="">
+            <img class="img-fluid" src="img/bee.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://guanahacks.com/" target="_blank">
+          <a class="portfolio-item" href="https://www.mezcaleslascolonias.com.mx/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Guanahacks</h2>
-                <p class="mb-0">El 1er. Hackatón en Guanajuato capital.</p>
+                <h2>Mezcales Las Colonias</h2>
+                <p class="mb-0">Tienda en línea.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/guanahacks.png" alt="">
+            <img class="img-fluid" src="img/chan.png" alt="">
           </a>
         </div>
       </div>
@@ -212,9 +212,9 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Contáctanos</h2>
-          <p class="lead mb-5">Juntos podemos desarrollar la opción a tu medida</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="mailto:futuristica.io@gmail.com">Email</a>
+          <h2>Contáctanos &#128241</h2>
+          <p class="lead mb-5">Juntos desarrollaremos lo mejor a tu medida &#128187</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://wa.me/+524778160928">WhatsApp</a>
         </div>
       </div>
     </div>
@@ -250,12 +250,12 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="https://github.com/wearemerge">
+          <a class="social-link rounded-circle text-white" href="#">
             <i class="icon-social-github"></i>
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Futuristica 2020</p>
+      <p class="text-muted small mb-0">Copyright &copy; Futuristica 2018 - 2025</p>
     </div>
   </footer>
 
